fixed too wide page (problem in menu css), beginning fingerspelling

--- a/media/styleA/style.css
+++ b/media/styleA/style.css
@@ -57,14 +57,13 @@ body {
 }
 
 
-.sf-menu .submenu {
-   height: 20px;
-   width: 100%
+.sf-menu .submenu  {
+   
 }
 
 .sf-navbar li ul {
-   width: 847px;
    height: 34px;
+   width: auto;
 }
 
 
